[gd_scene load_steps=6 format=3 uid="uid://4hxlinic428k"]

[ext_resource type="Script" path="res://UI/maze/maze.gd" id="1_hwt3s"]
[ext_resource type="Texture2D" uid="uid://bks5w3nu15als" path="res://nsvgs/labi.svg" id="1_o75um"]
[ext_resource type="Texture2D" uid="uid://c7u3vcejhigeo" path="res://nsvgs/gp4.svg" id="2_1gs2s"]
[ext_resource type="Script" path="res://UI/maze/pen.gd" id="3_ojcsj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0kqu1"]
radius = 43.0465

[node name="Maze" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hwt3s")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -259.0
offset_right = 256.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_o75um")
expand_mode = 1

[node name="Metal" type="Area2D" parent="TextureRect"]
priority = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TextureRect/Metal"]
position = Vector2(202, 379)
rotation = -0.504479
polygon = PackedVector2Array(-9.47823, 89.5777, 59.641, -35.6083, 45.6985, -55.8718, 40.5103, -71.3016, 39.5809, -92.3762, 46.3208, -114.928, 64.2318, -137.023, 80.2363, -145.321, 108.679, -151.32, 134.341, -144.006, 157.402, -127.845, 172.339, -99.0373, 171.727, -73.1022, 166.528, -55.4112, 149.885, -31.4739, 122.919, -17.8052, 118.359, -15.7535, 70.5071, 70.9136, 81.8876, 77.1972, 114.525, 78.0831, 142.877, 74.3179, 174.612, 64.4247, 206.804, 43.3605, 231.509, 19.305, 247.669, -3.7569, 256.944, -22.6242, 264.258, -48.2854, 265.682, -61.2073, 260.73, -60.5144, 257.857, -44.9662, 250.241, -22.898, 241.45, -4.90619, 222.964, 20.2986, 201.068, 41.3359, 168.968, 60.1658, 138.108, 70.5423, 113.832, 73.1313, 83.9123, 71.4614, 78.2676, 67.2025, 121.769, -11.5859, 128.563, -13.5463, 153.295, -27.3062, 170.723, -48.5261, 177.855, -69.7188, 179.369, -84.8749, 176.898, -101.089, 171.227, -115.643, 161.962, -129.897, 138.992, -148.291, 110.221, -156.181, 91.3804, -155.16, 79.3316, -150.465, 43.1241, -222.927, 45.0575, -226.428, 74.5585, -236.413, 101.068, -238.911, 123.41, -237.998, 150.914, -231.951, 173.857, -223.852, 197.886, -209.443, 219.498, -190.656, 235.191, -169.426, 247.291, -147.895, 252.061, -144.12, 255.261, -145.779, 248.322, -162.176, 235.647, -180.597, 216.844, -202.402, 192.515, -220.404, 166.644, -233.546, 133.013, -242.977, 110.279, -245.248, 88.3288, -244.802, 62.6033, -239.587, 39.8962, -231.563, 34.3698, -227.76, 16.5231, -218.195, -2.38152, -204.644, -18.7511, -187.41, -33.9445, -166.099, -47.7522, -134.884, -55.4319, -100.286, -56.436, -75.7099, -51.4946, -43.2818, -39.3672, -11.4553, -22.1055, 15.21, -17.8466, 9.56531, 5.35422, -32.4551, 2.60968, -41.9666, -2.87935, -60.9895, -5.95164, -84.3895, -1.44591, -107.032, 4.90196, -130.943, 22.5121, -156.631, 18.7096, -162.157, 5.44962, -144.348, -6.2421, -121.103, -11.5963, -88.6484, -10.6669, -67.5739, -6.44536, -50.3931, -1.3484, -32.729, -19.7158, 0.537231, -23.7921, 1.7135, -27.2025, -2.45416, -41.2633, -30.779, -48.5301, -61.0641, -50.4532, -90.6835, -46.7316, -116.044, -39.0249, -140.346, -28.2086, -164.074, -3.22997, -194.832, 12.9571, -207.599, 34.5793, -221.933, 38.5644, -220.875, 72.931, -147.971, 69.5486, -146.653, 51.5194, -132.619, 39.6182, -115.202, 34.4196, -97.5104, 32.3306, -79.2448, 37.6371, -55.7535, 50.6129, -33.7392, -9.32266, 74.8137, -16.1165, 76.7741, -44.1572, 51.0112, -67.4556, 18.7283, -82.9933, -17.2658, -91.619, -47.1589, -94.3262, -79.4957, -91.4157, -117.869, -80.8359, -157.72, -59.5684, -196.239, -36.0398, -224.371, -6.38318, -249.119, 24.7505, -266.198, 54.2515, -276.182, 80.4604, -282.273, 111.831, -283.229, 153.706, -278.386, 181.51, -268.746, 210.49, -255.029, 239.197, -234.61, 259.751, -211.839, 278.462, -187.8, 290.863, -162.676, 298.888, -139.969, 304.677, -117.353, 305.443, -110.976, 225.659, -100.44, 222.157, -102.373, 215.884, -124.114, 208.945, -140.51, 194.519, -159.898, 179.035, -175.301, 160.742, -187.686, 139.158, -196.177, 121.375, -199.141, 104.377, -199.388, 106.429, -194.828, 131.005, -193.824, 151.231, -184.941, 165.721, -178.083, 184.406, -164.34, 200.975, -142.626, 211.808, -122.937, 217.205, -101.68, 217.807, -94.4942, 218.162, -70.3101, 213.355, -51.2603, 206.706, -30.9429, 196.739, -17.0273, 184.053, -2.32764, 168.742, 10.922, 150.019, 20.004, 146.636, 26.132, 161.674, 19.585, 180.971, 7.39331, 196.857, -8.96594, 207.308, -23.757, 216.1, -41.7488, 222.448, -65.6591, 223.543, -92.4695, 226.352, -95.4879, 306.027, -106.115, 308.351, -86.7668, 304.474, -46.6424, 293.019, -7.27521, 275.044, 27.3498, 255.199, 52.9467, 231.944, 74.3759, 197.911, 96.7076, 167.443, 108.443, 137.158, 115.71, 101.711, 117.842, 67.8061, 115.114, 31.5486, 104.234, 14.9155, 95.0501, 16.6393, 85.7213, 87.6007, -40.7322, 68.2231, -59.4274, 61.4665, -80.2924, 64.1302, -101.668, 76.8155, -116.367, 91.5526, -126.507, 107.283, -128.103, 124.19, -125.622, 140.249, -113.328, 149.03, -98.1992, 151.592, -84.2194, 148.719, -68.6712, 140.502, -53.7889, 125.281, -42.7735, 106.742, -38.1599, 103.933, -35.1415, 36.8384, 84.3085, 48.219, 90.5921, 80.5828, 98.1805, 101.083, 100.361, 137.888, 97.8361, 173.216, 87.6422, 210.268, 68.1193, 244.184, 37.7263, 265.962, 8.62769, 278.803, -20.836, 288.899, -59.8112, 289.511, -85.7462, 242.319, -80.9604, 238.844, -72.5982, 234.639, -46.3624, 222.281, -17.7741, 204.763, 5.67987, 181.991, 26.2337, 156.384, 39.5103, 123.773, 48.9201, 119.487, 44.2692, 139.396, 6.14252, 168.296, -11.0279, 188.049, -34.3906, 198.956, -60.3526, 202.377, -89.306, 196.77, -116.39, 186.329, -134.72, 162.757, -160.301, 144.373, -170.451, 118.712, -177.766, 91.4177, -177.985, 73.7924, -212.503, 93.9361, -217.718, 129.2, -215.382, 158.363, -206.134, 186.86, -191.542, 211.308, -165.478, 227.302, -140.655, 234.542, -120.666, 242.603, -120.784, 283.968, -125.36, 283.366, -132.546, 281.497, -141.574, 269.671, -169.808, 251.142, -198.315, 223.584, -224.953, 195.27, -244.014, 164.539, -258.697, 134.409, -266.194, 112.55, -267.982, 79.8214, -266.634, 49.0529, -258.491, 16.743, -245.489, -11.3723, -225.601, -34.7184, -201.937, -54.1707, -174.982, -67.0116, -145.518, -73.8428, -120.732, -77.9296, -86.4349, -75.6145, -55.4568, -69.6151, -27.0137, -55.2535, 4.90405, -37.1164, 32.0527, -16.4713, 52.5899, -12.2124, 46.9453, 30.8058, -30.9677, 22.2985, -52.7994, 17.2928, -72.6977, 16.4547, -96.0065, 25.2193, -124.294, 46.0304, -151.642, 49.3226, -155.535, 27.2647, -196.272, 23.6718, -195.971, 6.12589, -182.813, -15.1685, -154.59, -28.4929, -124.25, -33.5463, -88.2023, -31.924, -62.176, -22.9063, -30.9241, -20.0062, -36.1767, -27.1818, -68.6961, -26.7793, -100.458, -20.5497, -132.43, -1.88156, -162.103, 16.0294, -184.198, 26.9108, -189.422, 43.1033, -156.685, 41.6533, -154.058, 22.2922, -129.337, 14.2848, -108.628, 10.5632, -83.2672, 14.5109, -59.3838, 24.1033, -31.2415, -15.9236, 39.1847, -21.3587, 40.753, -41.0372, 18.4648, -55.5813, -8.98456, -67.3166, -39.4523, -71.9572, -68.2874, -71.646, -97.8154, -66.6839, -131.629, -55.7763, -157.591, -41.6678, -185.213, -18.7138, -210.235, 7.25854, -232.449, 27.4307, -244.157, 68.2853, -258.153, 95.2783, -261.526, 122.089, -260.431, 146.574, -257.193, 177.487, -246.978, 201.607, -234.803, 227.596, -213.6, 243.864, -195.479, 262.001, -168.331, 276.755, -135.054, 273.855, -129.802, 239.676, -125.827, 234.697, -135.43, 222.296, -160.554, 200.958, -186.043, 185.383, -199.211, 154.26, -215.253, 119.662, -222.933, 90.1336, -223.244, 71.1107, -217.755, 67.5178, -217.454, 76.1164, -197.857, 87.7335, -175.45, 90.7518, -172.642, 104.248, -174.328, 128.733, -171.09, 157.322, -158.732, 183.912, -130.343, 193.112, -103.56, 195.701, -79.2842, 193.612, -61.0185, 181.346, -34.6644, 161.201, -12.6605, 133.268, 2.75903, 107.167, 50.032, 107.86, 54.9838, 121.749, 54.6561, 157.952, 44.9454, 183.559, 31.6689, 208.173, 9.84747, 225.783, -15.8407, 238.533, -43.0702, 244.671, -72.8077, 247.963, -76.7015, 277.674, -80.8587, 284.285, -78.3507, 279.898, -47.6465, 269.984, -13.1397, 251.225, 18.7677, 228.179, 46.0242, 191.729, 72.733, 153.984, 87.304, 124.182, 93.6955, 94.6539, 93.3843, 81.6407, 94.1955, 50.2437, 84.8561, 46.8333, 80.6886, 110.152, -33.9922, 122.773, -36.1622, 140.228, -47.0864, 150.588, -59.6431, 156.27, -78.2097, 156.033, -94.3324, 150.362, -108.887, 140.614, -122.265, 125.732, -130.482, 108.04, -135.681, 91.8264, -133.21, 74.4631, -124.52, 62.7444, -111.571, 56.2783, -95.7223, 56.3322, -75.1311, 61.9125, -58.3424, 77.3964, -42.9395, 78.0893, -37.9877, 6.55325, 91.5754, 4.52856, 97.3113, 38.7615, 113.928, 83.0804, 124.69, 118.436, 124.792, 163.485, 117.68, 199.479, 102.143, 232.063, 82.4373, 257.16, 59.7405, 278.363, 33.7516, 298.18, -2.14093, 309.152, -40.6327, 314.205, -76.6807, 312.191, -104.066, 308.727, -128.825, 300.794, -153.766, 291.411, -176.081, 277.168, -199.937, 259.724, -222.134, 234.701, -245.088, 209.013, -262.698, 173.422, -278.923, 140.182, -286.995, 105.402, -290.206, 76.6579, -287.8, 46.3727, -280.533, 16.3883, -269.673, -12.9945, -251.627, -43.6178, -225.128, -65.3043, -198.263, -83.1883, -165.873, -91.6791, -144.288, -97.2429, -117.66, -100.245, -77.0521, -97.5374, -44.7151, -88.9118, -14.8221, -72.4986, 21.6554, -49.2002, 53.9383, -18.6246, 83.3854)

[node name="Pen" type="Area2D" parent="TextureRect"]
position = Vector2(245, 480)
priority = 1
script = ExtResource("3_ojcsj")
finalPosition = Vector2(255, 254)

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/Pen"]
position = Vector2(19.2998, -19.7002)
scale = Vector2(0.065, 0.065)
texture = ExtResource("2_1gs2s")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TextureRect/Pen"]
position = Vector2(19.3, -19.7)
polygon = PackedVector2Array(-19, 20, -11, 17, 21, -16, 15, -21, -17, 11, -20, 19)

[node name="End" type="Area2D" parent="TextureRect"]
position = Vector2(255, 254)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextureRect/End"]
shape = SubResource("CircleShape2D_0kqu1")

[node name="CheckpointOne" type="Area2D" parent="TextureRect"]
position = Vector2(295, 417)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TextureRect/CheckpointOne"]
polygon = PackedVector2Array(-10, 11, -11, -17, 2, -9, 8, -4, 19, -9, 28, 0, 9, 6)

[node name="CheckpointTwo" type="Area2D" parent="TextureRect"]
position = Vector2(103, 178)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TextureRect/CheckpointTwo"]
polygon = PackedVector2Array(-15, 17, -5, 29, 6, 6, 12, -7, 10, -10, 9, -28, -3, -9)

[node name="CheckpointThree" type="Area2D" parent="TextureRect"]
position = Vector2(268, 363)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TextureRect/CheckpointThree"]
polygon = PackedVector2Array(-7, 37, 6, 37, 6, -9, -7, -9)

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = 550.0
offset_top = 591.0
offset_right = 600.0
offset_bottom = 622.0
text = "Close"

[connection signal="mouse_entered" from="TextureRect/Metal" to="TextureRect/Pen" method="_on_metal_mouse_entered"]
[connection signal="end_reached" from="TextureRect/Pen" to="." method="_on_pen_end_reached"]
[connection signal="mouse_entered" from="TextureRect/Pen" to="TextureRect/Pen" method="_on_mouse_entered"]
[connection signal="touched_metal" from="TextureRect/Pen" to="." method="_on_pen_touched_metal"]
[connection signal="mouse_entered" from="TextureRect/End" to="TextureRect/Pen" method="_on_end_mouse_entered"]
[connection signal="mouse_entered" from="TextureRect/CheckpointOne" to="TextureRect/Pen" method="_on_checkpoint_one_mouse_entered"]
[connection signal="mouse_entered" from="TextureRect/CheckpointTwo" to="TextureRect/Pen" method="_on_checkpoint_two_mouse_entered"]
[connection signal="mouse_entered" from="TextureRect/CheckpointThree" to="TextureRect/Pen" method="_on_checkpoint_three_mouse_entered"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
